themes/academicmin/assets/scss/custom.scss
/* ... */
// secondary links
.docs-sidebar .nav > li > a {
  @include sizeHeight-6;
  font-weight: 400;
  padding: 4px 32px;
  color: $sta-text;
  &:hover {
    color: $sta-text !important;
    text-decoration: none;
    background-color: transparent;
    @include nav-hover($gray1);
  }
}
.docs-sidebar .nav > li.active > a {
  font-weight: 500;
}
@media (min-width: 1200px) {
  // Navbar height adjustment requires docs-sidebar top adjustment
  .docs-sidebar {
    top: $navbarHeight;
  }
}
// Docs Table of contents
.nav.toc-top {
  border-left: 4px solid $sta-primary;
  a {
    @include sizeHeight-6;
    padding-bottom: .5rem;
  }
  a:hover {
    color: $sta-primary;
  }
}
#TableOfContents {
  li a {
    color: $sta-text2;
    @include sizeHeight-6;
  }
  li a.active {
    color: $sta-primary;
    font-weight: 700;
  }
  li a:hover,
  .toc-top li a:hover {
    color: $sta-primary;
    text-decoration: none;
  }
  // border
  border-left: 4px solid $sta-primary;
}
.toc-top li a {
  color: rgba(0,0,0,.65);
}

//
// Docs: Content
//
.docs-content {
  margin-left: auto; // due to being flexbox child -> grow margin
  flex: unset !important;
  padding-left: 1.5rem !important;
  padding-right: 1.5rem !important;
  article {
    background: white;
  }
  @media (min-width: 768px) {
    article {
      padding: .25rem 2rem;
      -webkit-box-shadow: 0 1px 2px 0 rgba(60,64,67,.3), 0 1px 3px 1px rgba(60,64,67,.15);
      box-shadow: 0 1px 2px 0 rgba(60,64,67,.3), 0 1px 3px 1px rgba(60,64,67,.15);
      border-radius: 2px;
    }
  }
  @media (min-width: 1200px) {
    &.col-xl-8 {
      flex: 0 0 936px;
      max-width: 936px;
    }
  }
  //
  // Docs Main Content/Article "On this page"
  //
  .docs-article-container {
    max-width: unset;
    .docs-toc {
      height: unset;
      position: unset;
      padding-left: 3px;
      @media (min-width: 1200px) {
        display: none !important;
      }
    }
    // Previous/next doc anchor
    .post-nav {
      display: flex;
    }
    // code blocks pull to outter article background edge
    pre {
      margin-left: -2rem;
      margin-right: -2rem;
      border-radius: 0px;
    }
  }
}

//
// Font Awesome
//

.featurette-icon {
  color: $sta-primary;
}

//
// Homepage
//

 .home-section {
  background-color: unset;
  padding: 0;
  margin: 40px 0 45px 0;
  &:nth-of-type(even) {
    background-color: $sta-base;
  }
  &.dark {
    background-color: $sta-dark-home-section-odd;
    &:nth-of-type(even) {
      background-color: $sta-dark-home-section-even;
    }
  }
}

.wg-border-bottom {
  padding-bottom: 40px;
  border-bottom: 1px solid $gray !important;
}

//
// Hero Widget
//

.wg-hero-center {
  .hero-media {
    max-width: 320px;
    margin-bottom: 22px;
  }
  h1,h2,h3,h4,h5,h6,p,div,pre,code, .cta-btns {
    text-align: center;
  }
  .hero-title {
    font-weight: 700;
  }
  .hero-title-1 {
    @include sizeHeight-2;
    margin: 10px 0;
  }
  .hero-title-2 {
    @include sizeHeight-3;
  }
  .hero-title-3 {
    @include sizeHeight-3;
  }
  .hero-text {
    @include sizeHeight-5;
  }
  p {
    margin-bottom: .75rem;
  }
  .cta-btns {
    margin-top: 1.25rem;
  }
  @media (min-width: 991.98px) {
    .hero-media {
      max-width: 400px;
    }
    .hero-title-1 {
      @include sizeHeight-1;
      margin: 10px 0;
    }
    .hero-title-2 {
      @include sizeHeight-2;
    }
    .hero-text {
      @include sizeHeight-3;
    }
  }
}

//
// Featurette Widget
//

 .wg-featurette {
  .align-left {
    text-align: left;
  }
}
.featurette {
  font-size: $fontSize-base;
  h1,h2,h3,h4,h5,h6,p,div,span {
    color: $sta-text;
  }
  h1,h2,h3 {
    margin-bottom: 1.25rem;
  }
  h4,h5,h6 {
    margin-bottom: 1rem;
  }
}

//
// Highlightjs
//
code, pre, .hljs {
  font-size: 14px;
  line-height: 20px;
}
.hljs {
  background: #f1f3f4;
}
.hljs-keyword {
  color: $secondary;
  font-weight: normal;
}
.hljs-title,
.hljs-string,
.hljs-params {
  color: #37474f;
  font-weight: normal;
}
.hljs-comment,
.hljs-number,
.hljs-number,
.hljs-literal,
.hljs-variable,
.hljs-template-variable,
.hljs-tag
.hljs-attr {
  font-weight: normal;
  font-style: normal;
  color: $sta-primary;  // firebase #d81b60;
}

//
// Icons Center-then-Inline
//
.icons-grow {
  display: inline-flex;
  div {
    margin-top: 1.0rem;
  }
  i {
    font-size:2.5rem;
    width: 70px;
  }
  @media (min-width: 992px) {
    display:flex;
    align-items:center;
    justify-content:center;
    div {
      margin-top: 2.5rem;
      display:inline-flex;
    }
    h4 {
      margin: 0 .5rem;
    }
    .highlight {
      line-height: 2.0rem;
    }
    i {
      font-size:2.5rem;
      width: 60px;
    }
  }
}

//
// Copyright + Powered by
//
.powered-by {
  @include sizeHeight-4;
}


//
// Disable Transition, Transform, Animation
// https://onezeronull.com/2016/10/06/disable-css-transitions-and-animations-temporarily-or-permanently/#permanent-solution
//

/* transform required for search overlay
* {
  -o-transform: none !important;
  -moz-transform: none !important;
  -ms-transform: none !important;
  -webkit-transform: none !important;
  transform: none !important;
}
*/

// Mobile menu: 'scrolls' down the menu via transition so do not disable
/*
 * {
  -o-transition-property: none !important;
  -moz-transition-property: none !important;
  -ms-transition-property: none !important;
  -webkit-transition-property: none !important;
  transition-property: none !important;
}
*/

// Prevent delay in rendering page content - disable all animation
// Does not prevent search overlay from working
* {
  -webkit-animation: none !important;
  -moz-animation: none !important;
  -o-animation: none !important;
  -ms-animation: none !important;
  animation: none !important;
}
/*
@media (min-width: 768px) {
  html *,
  .py-md-3  {
    margin: 0 !important;
    margin-top: 0 !important;
    margin-bottom: 0 !important;
    padding: 0 !important;
    padding-top: 0 !important;
    padding-bottom: 0 !important;
    top: 0 !important;
  }
}
*/

